--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,45 +1,15 @@
+# --- ?? ?? ?? ?? ---
 spring.application.name=cleaning-platform
-
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
-
-spring.datasource.url=jdbc:mariadb://localhost:3306/cleaning_db?characterEncoding=UTF-8&serverTimezone=UTC&authenticationPlugin=mysql_native_password&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-
-spring.datasource.password=3306
-
 spring.jpa.show-sql=true
-
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.jpa.hibernate.ddl-auto=update
-
 spring.main.web-application-type=servlet
-
-
-
-
 server.tomcat.max-parameter-count=1000
-
-file.upload-dir=D:/itedu/cleaningPro/uploadfolder
-
-
-spring.thymeleaf.cache=false
 server.servlet.session.persistent=true
 server.tomcat.max-part-count=100
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=100MB
 spring.web.resources.cache.cachecontrol.max-age=3600
-spring.profiles.include=secret
 
-#logging.level.org.springframework.security=DEBUG
-#spring.servlet.multipart.resolve-lazily=true
-#spring.datasource.url=jdbc:mariadb://localhost:3306/cleaning_db?characterEncoding=UTF-8&serverTimezone=UTC
-#logging.level.org.springframework.web.multipart=TRACE
-#logging.level.org.springframework.web.servlet.DispatcherServlet=TRACE
-#logging.level.org.springframework.web=TRACE
-#logging.level.org.apache.tomcat=DEBUG
-#logging.level.org.apache.catalina=DEBUG
-# logging.level.org.springframework=DEBUG
-# logging.level.org.springframework.web=DEBUG
+# Railway ?? ?? ???? ?? ??? ??? 'local' ???? ???
+spring.profiles.active=local
