--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.web.resources.cache.cachecontrol.max-age=3600
 
 # Railway ?? ?? ???? ?? ??? ??? 'local' ???? ???
 spring.profiles.active=local
+spring.profiles.group.local=secret
